--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Untold(p1)</title>
+    <title>UntoldCoding</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,7 +15,7 @@
         <div class="right"></div>
         <a href="new.html"
           ><p>
-            Happy birthday <br />
+            Happy Valentine's Day <br />
 
             <span>Click Here</span>
           </p></a
@@ -23,7 +24,7 @@
       <h1><span>I&nbsp;</span><span>You</span></h1>
       <h2>
         I have Something for you💖 <br />
-        Please Hover on Above Text And click on the Heart
+        Please Hover on Above Text And click on Valentine's Heart
       </h2>
     </section>
   </body>
